syntax = "proto3";

package com.example.fluffyapi;

option java_multiple_files = true;
option java_package = "com.example.fluffyapi";
option java_outer_classname = "PreSignedAnimalUploadProto";


message PreSignedAnimalUpload {
  string objectId = 1;
  map<string, string> s3Properties = 2;
  string s3UploadUrl = 3;
}